--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
+    "react-spinners": "^0.5.1",
     "request-promise": "^4.2.4"
   },
   "scripts": {
