--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
     "react-spinners": "^0.5.1",
+    "recharts": "^1.5.0",
     "request-promise": "^4.2.4"
   },
   "scripts": {
